[GOBBLIN-517] Add missing apache license info